; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sctp/extr_input.c_sctp_err_finish.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sctp/extr_input.c_sctp_err_finish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32 }
%struct.sctp_association = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sctp_err_finish(%struct.sock* %0, %struct.sctp_association* %1) #0 {
  %3 = alloca %struct.sock*, align 8
  %4 = alloca %struct.sctp_association*, align 8
  store %struct.sock* %0, %struct.sock** %3, align 8
  store %struct.sctp_association* %1, %struct.sctp_association** %4, align 8
  %5 = load %struct.sock*, %struct.sock** %3, align 8
  %6 = call i32 @sctp_bh_unlock_sock(%struct.sock* %5)
  %7 = load %struct.sctp_association*, %struct.sctp_association** %4, align 8
  %8 = icmp ne %struct.sctp_association* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load %struct.sctp_association*, %struct.sctp_association** %4, align 8
  %11 = call i32 @sctp_association_put(%struct.sctp_association* %10)
  br label %12

12:                                               ; preds = %9, %2
  ret void
}

declare dso_local i32 @sctp_bh_unlock_sock(%struct.sock*) #1

declare dso_local i32 @sctp_association_put(%struct.sctp_association*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
